Absolute basic showcase of blog posts

--- a/theme.toml
+++ b/theme.toml
@@ -11,11 +11,5 @@ features = ["", ""]
 min_version = 0.14
 
 [author]
-  name = ""
-  homepage = ""
-
-# If porting an existing theme
-[original]
-  name = ""
-  homepage = ""
-  repo = ""
+  name = "sthordall"
+  homepage = "sthordall.xyz"
